@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.0 - Current Development
 
+* NUTCH-1037 Option to deduplicate anchors prior to indexing (markus)
+
 * NUTCH-1055 upgrade package.html file in language identifier plugin (lewismc)
 
 * NUTCH-1043 Add pattern for filtering .js in default url filters (jnioche)
